[package]
name = "zeth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
crossbeam-channel = "0.5.6"
rust-embed = "6.4.2"
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["full"] }
tower-http = { version = "0.3.5", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
