[package]
name = "zeth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
axum = "0.6.1"
chrono = "0.4.23"
crossbeam-channel = "0.5.6"
hyper = { version = "0.14.23", features = ["client"] }
hyper-tls = "0.5.0"
rust-embed = "6.4.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
surrealdb = "1.0.0-beta.8"
tokio = { version = "1.23.0", features = ["full"] }
tower-http = { version = "0.3.5", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
